# break_interval

./: CMakeLists.txt  Changelog.md  LICENSE  README.md
.forgejo/workflows/: build_releases.yaml
src/: interval_notification.h  main.c
